syntax = "proto3";

import "const.proto";
import "google/api/annotations.proto";

package engine;

service RoutingOutboundCallService {
    // Create RoutingOutboundCall
    rpc CreateRoutingOutboundCall(CreateRoutingOutboundCallRequest) returns (RoutingOutboundCall) {
        option (google.api.http) = {
            post: "/routing/outbound/calls"
            body: "*"
        };
    }
    // List of RoutingOutboundCall
    rpc SearchRoutingOutboundCall(SearchRoutingOutboundCallRequest) returns (ListRoutingOutboundCall) {
        option (google.api.http) = {
            get: "/routing/outbound/calls"
        };
    }
    // RoutingOutboundCall item
    rpc ReadRoutingOutboundCall(ReadRoutingOutboundCallRequest) returns (RoutingOutboundCall) {
        option (google.api.http) = {
            get: "/routing/outbound/calls/{id}"
        };
    }
    // Update RoutingOutboundCall
    rpc UpdateRoutingOutboundCall(UpdateRoutingOutboundCallRequest) returns (RoutingOutboundCall) {
        option (google.api.http) = {
            put: "/routing/outbound/calls/{id}"
            body: "*"
        };
    }

    // Patch RoutingOutboundCall
    rpc PatchRoutingOutboundCall(PatchRoutingOutboundCallRequest) returns (RoutingOutboundCall) {
        option (google.api.http) = {
            patch: "/routing/outbound/calls/{id}"
            body: "*"
        };
    }


    // Remove RoutingOutboundCall
    rpc DeleteRoutingOutboundCall(DeleteRoutingOutboundCallRequest) returns (RoutingOutboundCall) {
        option (google.api.http) = {
            delete: "/routing/outbound/calls/{id}"
        };
    }
}

message PatchRoutingOutboundCallRequest {
    int64 id = 1;

    string name = 2;
    string description = 3;
    Lookup schema = 4;
    string pattern = 5;
    int32 priority = 6;
    bool disabled = 7;

    repeated string fields = 8;

    int64 domain_id = 9;
}

message DeleteRoutingOutboundCallRequest {
    int64 id = 1;

    int64 domain_id = 2;
}

message UpdateRoutingOutboundCallRequest {
    int64 id = 1;

    string name = 2;
    string description = 3;
    Lookup schema = 4;
    string pattern = 5;
    int32 priority = 6;
    bool disabled = 7;

    int64 domain_id = 8;
}

message ReadRoutingOutboundCallRequest {
    int64 id = 1;
    int64 domain_id = 2;
}

message SearchRoutingOutboundCallRequest {
    int32 page = 1;
    int32 size = 2;

    int64 domain_id = 3;
}

message CreateRoutingOutboundCallRequest {
    string name = 1;
    string description = 2;
    Lookup schema = 3;
    string pattern = 4;
    int32 priority = 5;
    bool disabled = 6;

    int64 domain_id = 7;
}

message RoutingOutboundCall {
    int64 id = 1;

    int64 created_at = 2;
    Lookup created_by = 3;
    int64 updated_at = 4;
    Lookup updated_by = 5;
    string name = 6;
    string description = 7;
    Lookup schema = 8;
    string pattern = 9;
    int32 priority = 10;
    bool disabled = 11;

    int64 domain_id = 12;
}

message ListRoutingOutboundCall {
    repeated RoutingOutboundCall items = 1;
}